# allay

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test-ci.yml
cmake/: check_format.cmake  zero.cmake
demo/cmd_parser_demo/: CMakeLists.txt  cmd_parser_demo.cpp
demo/colorful_demo/: CMakeLists.txt  colorful_demo.cpp
demo/console_demo/: CMakeLists.txt  console_demo.cpp
demo/data_handler_demo/: CMakeLists.txt  data_handler_demo.cpp
demo/data_record_io_demo/: CMakeLists.txt  data_record_io_demo.cpp
demo/ini_parser_demo/: CMakeLists.txt  ini_parser_demo.cpp
demo/mlog_demo/: CMakeLists.txt  mlog_demo.cpp
demo/mparser_demo/: CMakeLists.txt  mparser_demo.cpp
demo/mtest_demo/: CMakeLists.txt  mtest_demo.cpp
demo/mtimer_demo/: CMakeLists.txt  mtimer_demo.cpp
demo/pbar_demo/: CMakeLists.txt  pbar_demo.c  pbar_demo.cpp
demo/progress_demo/: CMakeLists.txt  progress_demo.cpp
demo/progressbar_demo/: progressbar_demo.cpp
demo/windows_console_demo/: CMakeLists.txt  windows_console_demo.cpp
docs/: cmd_parser_doc.md  colorful_doc.md  data_handler_doc.md  mparser_doc.md
include/allay/cmd_parser/: cmd_parser.hpp
include/allay/colorful/: colorful.hpp
include/allay/console/: console.hpp
include/allay/data_handler/: data_handler.hpp
include/allay/data_record_io/: data_record_io.hpp
include/allay/gaussquad/: gausslegendre.hpp  gausslobatto.hpp
include/allay/ini_parser/: ini_parser.hpp
include/allay/mlog/: mlogger.hpp  mlogtool.hpp
include/allay/mparser/: mparser.hpp
include/allay/mtest/: mtest.hpp  mtest_macro.hpp
include/allay/mtimer/: mtimer.hpp
include/allay/pbar/: pbar.hpp
include/allay/progress/: progress.hpp
include/allay/progressbar/: pbar.hpp  progressbar.hpp
include/allay/windows_console/: windows_console.hpp
src/: CMakeLists.txt
src/pbar/: pbar.c
